# NumGI

./: .flake8  .gitignore  DatasetTokenizer.py  EquationCreator.py  EquationTokenizer.py  LICENSE  README.md  imporant.md  model.py  pyproject.toml
.github/workflows/: system_test.yml  test.yml
NumGI/: ConstantDictionaries.py  DatasetTokenizer.py  EquationTokenizer.py  LoadTokenizer.py  ParallelEquationGenerator.py  SolutionGenerator.py  __init__.py  _version.py
NumGI/Loss/: LossDataset.py
NumGI/Model/performance/: LossAnalyzer.py
NumGI/model/: Inference.py  model.py
test/EquationTests/: test_DatasetTokenizer.py  test_EquationGenerator.py  test_numpy_sympy_torch.py
test/ModelTests/: test_inference.py  test_model.py
