[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "NumGI"
description = "Differential equation solver."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Arnaud Bergeron", email = "bergerona62@gmail.com" }]
dynamic = ["version"]
dependencies = ["sympy", "torch", "Numba"]




[tool.hatch.build.targets.wheel]
packages = ["NumGI"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "NumGI/_version.py"

[tool.pytest.ini_options]
addopts = "-ra -vv"

[tool.coverage.run]
branch = true
source = ["NumGI/"]


[tool.codespell]
skip = "./.git,.mypy_cache,env,venv,tests,*bval,*bvec"

[tool.black]
line-length = 100
