[tool.poetry]
name = "numgi"
version = "0.1.0"
description = "NumGI - Differential Equation Solver using Transformer-based AI"
authors = ["Your Name <you@example.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.1.0"
sympy = "^1.12"
pytest = "^7.4.2"
torch = "^2.0.1"
coverage = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
